--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^6.1.0 
+  google_fonts: ^4.0.4
   font_awesome_flutter: ^10.7.0
-  flutter_screenutil: ^5.9.0
+  flutter_screenutil: any
+  http: any
+  shared_preferences: ^2.2.2
+  dio: ^5.4.0
+  image_picker: ^1.0.7
+  file_picker: ^6.1.1 
+  audioplayers: ^6.4.0
+  intl: ^0.18.1
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
+  webview_flutter: ^4.4.1
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -60,6 +71,13 @@ flutter:
     - assets/student_research.png
     - assets/logo.png
     - assets/dorm_background.png
+    - assets/chatbot.png
+    - assets/avatar.png
+    - assets/audio/notification.mp3
+    - assets/banner.png
+    - assets/banner2.png
+    - assets/banner3.png
+
     
 
 
