--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,6 @@
   "buildCommand": "flutter build web",
   "outputDirectory": "build/web",
   "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
