--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
   "buildCommand": "flutter build web",
   "outputDirectory": "build/web",
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ]
 }
