--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,4 +1,6 @@
 arb-dir: lib/l10n
 template-arb-file: app_en.arb
 output-localization-file: app_localizations.dart
+output-dir: lib/gen_l10n
 output-class: AppLocalizations
+untranslated-messages-file: untranslated_ru.txt
