--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,8 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.3.0 <4.0.0"
+  sdk: ">=2.17.0 <3.0.0"
+
 
 
 
@@ -32,8 +33,9 @@ dependencies:
   flutter_image_slideshow: ^0.1.4
   animate_do: ^2.1.0
   intl: ^0.20.2
-  provider: ^6.0.0
+  provider: ^6.0.5
   web: ^1.1.1
+  web_socket_channel: ^3.0.3
 
 
 
